salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/AccountExecutiveAE__c.field-meta.xml
<CustomField>
    <fullName>AccountExecutiveAE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive (AE)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>