salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <displayFormat>ACC-{0000000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>