salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ActiveProdsCashValueCat__c.field-meta.xml
<CustomField>
    <fullName>ActiveProdsCashValueCat__c</fullName>
    <label>Active Prods Cash Value Cat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>