salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/AgreementStartDate__c.field-meta.xml
<CustomField>
    <fullName>AgreementStartDate__c</fullName>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>