salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Apps__c.field-meta.xml
<CustomField>
    <fullName>Apps__c</fullName>
    <label># Apps</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>