salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/AppSecIntegration__c.field-meta.xml
<CustomField>
    <fullName>AppSecIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AppSec Integration</label>
    <type>Checkbox</type>
</CustomField>