salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ArCreditStatus__c.field-meta.xml
<CustomField>
    <fullName>ArCreditStatus__c</fullName>
    <label>A/R Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Hold</fullName>
            </value>
            <value>
                <fullName>Delinquent</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>