salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/AreasOfInterest__c.field-meta.xml
<CustomField>
    <fullName>AreasOfInterest__c</fullName>
    <label>Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vulnerability Management</fullName>
            </value>
            <value>
                <fullName>Application Security</fullName>
            </value>
            <value>
                <fullName>Penetration Testing</fullName>
            </value>
            <value>
                <fullName>SIEM</fullName>
            </value>
            <value>
                <fullName>UBA</fullName>
            </value>
            <value>
                <fullName>IT Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>