salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Asset_Count__c.field-meta.xml
<CustomField>
    <fullName>Asset_Count__c</fullName>
    <label>Asset Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>