salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/At_Risk__c.field-meta.xml
<CustomField>
    <fullName>At_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box represents whether an account is at risk or not</description>
    <label>At Risk</label>
    <type>Checkbox</type>
</CustomField>