salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/AutomationAE__c.field-meta.xml
<CustomField>
    <fullName>AutomationAE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Automation Rep(AE)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsPXEx</relationshipName>
    <type>Lookup</type>
</CustomField>