salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/BusinessDevelopmentRepBDR__c.field-meta.xml
<CustomField>
    <fullName>BusinessDevelopmentRepBDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development Rep (BDR)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>