salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Champion_Contact__c.field-meta.xml
<CustomField>
    <fullName>Champion_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Champion Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>