salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ChannelAccountManagerCAM__c.field-meta.xml
<CustomField>
    <fullName>ChannelAccountManagerCAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Account Manager (CAM)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsoLeb</relationshipName>
    <type>Lookup</type>
</CustomField>