salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Cloud_Hosting__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Hosting__c</fullName>
    <label>Cloud Hosting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>RackSpace</fullName>
            </value>
            <value>
                <fullName>Cloud Averse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>