salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Compliances__c.field-meta.xml
<CustomField>
    <fullName>Compliances__c</fullName>
    <label>Compliances</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FDCC</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>NERC</fullName>
            </value>
            <value>
                <fullName>PCI</fullName>
            </value>
            <value>
                <fullName>SOX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>