salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ConnectIntegration__c.field-meta.xml
<CustomField>
    <fullName>ConnectIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connect Integration</label>
    <type>Checkbox</type>
</CustomField>