salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/CoSellDiscount__c.field-meta.xml
<CustomField>
    <fullName>CoSellDiscount__c</fullName>
    <description>This information is maintained by Impartner.</description>
    <label>Co-Sell Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>