salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/CreditCheck__c.field-meta.xml
<CustomField>
    <fullName>CreditCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Check</label>
    <type>Checkbox</type>
</CustomField>