salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/CsmCustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>CsmCustomerGroup__c</fullName>
    <label>CSM Customer ARR Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 3A</fullName>
            </value>
            <value>
                <fullName>Tier 3B</fullName>
            </value>
            <value>
                <fullName>Tier 3C</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>