salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/CSMScore__c.field-meta.xml
<CustomField>
    <fullName>CSMScore__c</fullName>
    <label>CSM Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>