salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/CSMTeamTerritoryGroup__c.field-meta.xml
<CustomField>
    <fullName>CSMTeamTerritoryGroup__c</fullName>
    <label>CSM Team Territory Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3 East</fullName>
            </value>
            <value>
                <fullName>Tier 3 West</fullName>
            </value>
            <value>
                <fullName>Tier 3 Central</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Tier 0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>