salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Customer_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flagged if this customer is in a state of escalation due to product, support, or services.</description>
    <inlineHelpText>If this customer is in a state of escalation due to product, support, or services - check this box.</inlineHelpText>
    <label>Customer Escalation</label>
    <type>Checkbox</type>
</CustomField>