salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/CustomerHealthScore__c.field-meta.xml
<CustomField>
    <fullName>CustomerHealthScore__c</fullName>
    <inlineHelpText>Very Healthy = 80 to 100.  Healthy = 65-79. Neutral = 50 - 64. Unhealthy = 35 -49. Very Unhealthy = 0 -34.</inlineHelpText>
    <label>Health Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>