salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/CustomerHealthStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerHealthStatus__c</fullName>
    <label>Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Unhealthy</fullName>
            </value>
            <value>
                <fullName>Unhealthy</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Very Healthy</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>