salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/CustomerSuccessEngineerCSE__c.field-meta.xml
<CustomField>
    <fullName>CustomerSuccessEngineerCSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Engineer (CSE)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>