salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/CustomerSuccessManagerCSM__c.field-meta.xml
<CustomField>
    <fullName>CustomerSuccessManagerCSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Manager (CSM)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>