salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/CustomerUseCase__c.field-meta.xml
<CustomField>
    <fullName>CustomerUseCase__c</fullName>
    <label>Customer Use Case</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>