salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/DateOfFirstOrder__c.field-meta.xml
<CustomField>
    <fullName>DateOfFirstOrder__c</fullName>
    <label>Date of First Order</label>
    <type>Date</type>
</CustomField>