salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/DaysOutstanding__c.field-meta.xml
<CustomField>
    <fullName>DaysOutstanding__c</fullName>
    <label>Days Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>