salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/DeniedPartyStatus__c.field-meta.xml
<CustomField>
    <fullName>DeniedPartyStatus__c</fullName>
    <label>Denied Party Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>