salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/DeniedPartyStatusLastScreenedDate__c.field-meta.xml
<CustomField>
    <fullName>DeniedPartyStatusLastScreenedDate__c</fullName>
    <label>Denied Party Status Last Screened Date</label>
    <type>Date</type>
</CustomField>