salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/DirectorLevelTeam__c.field-meta.xml
<CustomField>
    <fullName>DirectorLevelTeam__c</fullName>
    <label>Director Level Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ManagerLevelTeam__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Named</fullName>
            </value>
            <value>
                <fullName>SLED</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Majors</fullName>
                <isActive>false</isActive>
                <label>Majors</label>
            </value>
            <value>
                <fullName>National</fullName>
                <isActive>false</isActive>
                <label>National</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>