salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/DomoDetails__c.field-meta.xml
<CustomField>
    <fullName>DomoDetails__c</fullName>
    <formula>HYPERLINK(&#39;/one/one.app#/n/DOMOAssetsandSubscriptions?myparam=&#39;+NetsuiteCustomerId__c , &#39;Assets &amp; Subscriptions&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domo Details</label>
    <type>Text</type>
</CustomField>