salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Environment_Size__c.field-meta.xml
<CustomField>
    <fullName>Environment_Size__c</fullName>
    <label>Environment Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>