salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ExecutiveSponsor__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveSponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>