salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ExistingCustomerARR__c.field-meta.xml
<CustomField>
    <fullName>ExistingCustomerARR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Notes whether this account / opp is considered an Existing ARR Customer (if checked) or New ARR Prospect (if unchecked) for operational tracking and compensation.</inlineHelpText>
    <label>Existing Customer (ARR)</label>
    <type>Checkbox</type>
</CustomField>