salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ExportLicenseExpiration__c.field-meta.xml
<CustomField>
    <fullName>ExportLicenseExpiration__c</fullName>
    <description>The date the export license expires.</description>
    <inlineHelpText>The date the export license expires.</inlineHelpText>
    <label>Export License Expiration</label>
    <type>Date</type>
</CustomField>