salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/ExportStatus__c.field-meta.xml
<CustomField>
    <fullName>ExportStatus__c</fullName>
    <description>The status of the Legal team&#39;s export review of the account.</description>
    <inlineHelpText>The status of the Legal team&#39;s export review of the account.</inlineHelpText>
    <label>Export Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>