salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/External_IPs__c.field-meta.xml
<CustomField>
    <fullName>External_IPs__c</fullName>
    <label># External Assets</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>