salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Flash__c.field-meta.xml
<CustomField>
    <fullName>Flash__c</fullName>
    <inlineHelpText>Specific client services information for this account to be aware of</inlineHelpText>
    <label>Flash</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>