salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/FocusCustomerVerticals__c.field-meta.xml
<CustomField>
    <fullName>FocusCustomerVerticals__c</fullName>
    <label>Focus Customer Verticals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computer / Technology Mfg</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Government-Federal</fullName>
            </value>
            <value>
                <fullName>Government-State/Local</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Industrial Manufacturing</fullName>
            </value>
            <value>
                <fullName>Publishing/Broadcast/Media</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail / Wholesale</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Transportation / Distribution</fullName>
            </value>
            <value>
                <fullName>Travel/Hospitality/Recreation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>