salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/Fortune1000Rank__c.field-meta.xml
<CustomField>
    <fullName>Fortune1000Rank__c</fullName>
    <label>Fortune 1000 Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>