salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/FortuneGroup__c.field-meta.xml
<CustomField>
    <fullName>FortuneGroup__c</fullName>
    <formula>IF(Fortune1000Rank__c &lt;= 500, &quot;F500&quot;,
IF(Fortune1000Rank__c  &gt;  500, &quot;F501-1000&quot;,
IF(ISNULL(Fortune1000Rank__c), &quot;Not Fortune 1000&quot;,
&quot;Not Fortune 1000&quot;)))</formula>
    <label>Fortune Group</label>
    <type>Text</type>
</CustomField>