salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/GroupID__c.field-meta.xml
<CustomField>
    <fullName>GroupID__c</fullName>
    <label>Group ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>