salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/HasDedicatedSecurityTeam__c.field-meta.xml
<CustomField>
    <fullName>HasDedicatedSecurityTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated Security Team</label>
    <type>Checkbox</type>
</CustomField>