salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/HealthIndicator__c.field-meta.xml
<CustomField>
    <fullName>HealthIndicator__c</fullName>
    <formula>IF(ISPICKVAL(CustomerHealthStatus__c,&quot;Very Healthy&quot;),
IMAGE($Setup.CustomerHealthSettings__c.VeryHealthyImageURL__c,&quot;Very Healthy&quot;,30,30),
IF(ISPICKVAL(CustomerHealthStatus__c,&quot;Healthy&quot;),
IMAGE($Setup.CustomerHealthSettings__c.HealthyImageURL__c,&quot;Healthy&quot;,30,30),
IF(ISPICKVAL(CustomerHealthStatus__c,&quot;Neutral&quot;),
IMAGE($Setup.CustomerHealthSettings__c.NeturalImageURL__c,&quot;Neutral&quot;,30,30),
IF(ISPICKVAL(CustomerHealthStatus__c,&quot;Unhealthy&quot;),
IMAGE($Setup.CustomerHealthSettings__c.UnhealthyImageURL__c,&quot;Unhealthy&quot;,30,30),
IF(ISPICKVAL(CustomerHealthStatus__c,&quot;Very Unhealthy&quot;),
IMAGE($Setup.CustomerHealthSettings__c.VeryUnHealthyImageURL__c,&quot;Very Unhealthy&quot;,30,30),&quot;&quot;
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Indicator</label>
    <type>Text</type>
</CustomField>