salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/IDR_ABM__c.field-meta.xml
<CustomField>
    <fullName>IDR_ABM__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IDR ABM</label>
    <type>Checkbox</type>
</CustomField>