salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/IDR_Foundational_Sources__c.field-meta.xml
<CustomField>
    <fullName>IDR_Foundational_Sources__c</fullName>
    <label>IDR Foundational Sources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Confirmed</fullName>
            </value>
            <value>
                <fullName>No Active Directory</fullName>
            </value>
            <value>
                <fullName>No LDAP</fullName>
            </value>
            <value>
                <fullName>No DHCP</fullName>
            </value>
            <value>
                <fullName>No DNS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>