salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/IDRAE__c.field-meta.xml
<CustomField>
    <fullName>IDRAE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IDR AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>