salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/IDRDeck__c.field-meta.xml
<CustomField>
    <fullName>IDRDeck__c</fullName>
    <label>IDR Deck #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>