salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/IDRIntegration__c.field-meta.xml
<CustomField>
    <fullName>IDRIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IDR Integration</label>
    <type>Checkbox</type>
</CustomField>