salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__behavioral_evaluation_score__c.field-meta.xml
<CustomField>
    <fullName>infer3__behavioral_evaluation_score__c</fullName>
    <description>The score of the Account at the time the last Opportunity was created, or if no opportunities were created, the current behavior score.</description>
    <label>Infer: Behavioral Evaluation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>