salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Behavioral_Rating__c.field-meta.xml
<CustomField>
    <fullName>infer3__Behavioral_Rating__c</fullName>
    <label>Infer: Behavior Score [1-4]</label>
    <length>10</length>
    <type>Text</type>
</CustomField>