salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Behavioral_Score__c.field-meta.xml
<CustomField>
    <fullName>infer3__Behavioral_Score__c</fullName>
    <label>Infer: Behavior Score [0-100]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>