salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Behavioral_Updated__c.field-meta.xml
<CustomField>
    <fullName>infer3__Behavioral_Updated__c</fullName>
    <label>Infer: Behavior Score Last Updated</label>
    <type>DateTime</type>
</CustomField>