salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Encoded_Rating__c.field-meta.xml
<CustomField>
    <fullName>infer3__Encoded_Rating__c</fullName>
    <formula>RPAD(&#39;4&#39;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_3_Threshold__c,&#39;4&#39;)+RPAD(&#39;3&#39;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_2_Threshold__c-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_3_Threshold__c,&#39;3&#39;)+RPAD(&#39;2&#39;,$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_1_Threshold__c-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_2_Threshold__c,&#39;2&#39;)+RPAD(&#39;1&#39;,101-$Setup.infer3__Infer_Scoring_Settings__c.infer3__Score_Bucket_1_Threshold__c,&#39;1&#39;)</formula>
    <label>Infer Encoded Rating</label>
    <type>Text</type>
</CustomField>