salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Infer_Personas__c.field-meta.xml
<CustomField>
    <fullName>infer3__Infer_Personas__c</fullName>
    <label>Infer: Profiles</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>