salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Infer_Profiles_Short__c.field-meta.xml
<CustomField>
    <fullName>infer3__Infer_Profiles_Short__c</fullName>
    <label>Infer: Profiles (Short)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>