salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Account/fields/infer3__Infer_Rating__c.field-meta.xml
<CustomField>
    <fullName>infer3__Infer_Rating__c</fullName>
    <formula>TRIM(SUBSTITUTE(MID(CASE(FLOOR(infer3__Score_Index__c/255),0,infer3__Score_Object_ID__r.infer3__Rating_0__c,1,infer3__Score_Object_ID__r.infer3__Rating_1__c,2,infer3__Score_Object_ID__r.infer3__Rating_2__c,3,infer3__Score_Object_ID__r.infer3__Rating_3__c,4,infer3__Score_Object_ID__r.infer3__Rating_4__c,5,infer3__Score_Object_ID__r.infer3__Rating_5__c,6,infer3__Score_Object_ID__r.infer3__Rating_6__c,null),1+MOD(infer3__Score_Index__c,255),1),&#39;^&#39;,&#39; &#39;))</formula>
    <label>Infer: Fit Score</label>
    <type>Text</type>
</CustomField>